--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -8,7 +8,7 @@ jobs:
         
         steps:
           - uses: actions/checkout@v3
-#           - name: Step one
+          - name: Step one
           - name: Step two
             run: env | sort
 #     job2:
