--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -8,14 +8,14 @@ jobs:
         
         steps:
           - uses: actions/checkout@v3
+
           - name: Step one
-          - name: Step two
             run: env | sort
-#     job2:
-#         runs-on: windows-latest
+    job2:
+        runs-on: windows-latest
         
-#         steps:
-#           - uses: actions/checkout@v3
-#           - name: Step one
-#           - name: Step two
-#             run: "Get-ChildItem Env: | Sort-Object Name"
+        steps:
+          - uses: actions/checkout@v3
+
+          - name: Step one
+            run: "Get-ChildItem Env: | Sort-Object Name"
